<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/complete"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_below="@id/tv_profile"
            android:text="@string/add_details"
            android:textSize="@dimen/_12ssp" />
       <!-- <LinearLayout
            android:id="@+id/page_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


        </LinearLayout>-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/il_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/submit"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/il_verify"
            android:layout_below="@id/tv_info"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_img"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile_icon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_bday"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/et_bday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="start"
                        android:hint="@string/birthdate"
                        android:inputType="none"
                        android:longClickable="false"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/gender"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:weightSum="2.0">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1.0"
                        android:background="@drawable/rounded_square_edt"
                        android:text="@string/male"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1.0"
                        android:background="@drawable/rounded_square_edt"
                        android:text="@string/female"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </RadioGroup>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/hint_enter_mobile"
                        android:importantForAutofill="no"
                        android:inputType="textPostalAddress"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:minLines="1"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:minLines="1"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

</layout>